@@ -1,3 +1,4 @@
+* Update Shipwire to latest version of dtd.
 * Use real addresses for Shipwire remote fulfillment tests
 * Pass Shipwire the ISO country code instead of the previous name and country combo. Always add the country element to the document
 * Update Shipwire warehouses and don't send unneeded Content-Type header
